// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminApiKey render AdminApiKey 1`] = `
<DocumentFragment>
  .c6 {
  margin-top: 0;
  min-height: calc(100vh - 10.5rem);
}

.c6 td {
  background: #FFFFFF;
}

.c6 .api-keys-data-table-over-flow-menu .cds--popover {
  display: none;
}

.c6 .api-keys-data-table-over-flow-menu .cds--popover-content.cds--tooltip-content {
  display: none;
}

.c6 .cds--data-table thead {
  position: sticky;
  top: 0;
  z-index: 1;
}

.c6 .cds--data-table-content {
  overflow-x: initial;
}

.c6 .api-keys-data-table-key-name {
  width: 15%;
  padding: 1.5rem 1rem;
}

.c6 .api-keys-data-table-key {
  width: 40%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-key-country {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-validity {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-validity span {
  display: flex;
  width: 5rem;
}

.c6 .api-keys-data-table-over-flow-menu {
  width: 5%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-row {
  display: flex;
  align-items: center;
  padding: 0.5rem;
  background: #F6F6F6;
  width: 27rem;
}

.c6 .api-keys-data-table-row >p {
  font-size: 0.875rem;
  width: 23.5rem;
  overflow-wrap: break-word;
  height: 2.5rem;
  overflow: hidden;
  line-height: 1.25rem;
}

.c6 .api-keys-data-table-row >.api-keys-replicate-icon {
  margin-left: 1rem;
  cursor: pointer;
}

.c12 {
  color: #474747;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
  background: #B9EFCB;
  border-radius: 62rem;
  width: max-content;
  height: 1.5rem;
  padding: 0.3rem 0.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c13 {
  color: #474747;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
  background: #FFD7D9;
  border-radius: 62rem;
  width: max-content;
  height: 1.5rem;
  padding: 0.3rem 0.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c11 {
  display: flex;
  width: 5rem;
}

.c7 {
  display: flex;
  align-items: center;
  justify-items: center;
}

.c1 >h3 {
  color: #FFF;
  font-family: Open Sans;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.75rem;
}

.c1 >p {
  color: #F5F5F5;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

.c0 {
  padding: 3.75rem 2rem 1rem 0rem;
  background: #222;
  display: flex;
  align-items: center;
}

.c0 button {
  margin-right: 1rem;
}

.c0 button path:not([data-icon-path]):not([fill=none]),
.c0 button .cds--btn__icon {
  fill: #fff!important;
}

.c14 .cds--popover {
  display: none;
}

.c2 {
  background-color: #ffffff;
}

.c17 {
  padding: 0rem 1rem 0.5rem 1rem;
}

.c9 {
  margin-left: 0.5rem;
  color: #277AFF;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
  letter-spacing: 0.02rem;
  text-decoration-line: underline;
  cursor: pointer;
}

.c8 :focus {
  outline: none!important;
}

.c8 .cds--popover-content .cds--toggletip-content {
  padding-top: 0.5rem;
}

.c8 .cds--popover-caret {
  display: none!important;
}

.c10 .list-content {
  margin-top: 0.5rem;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
}

.c5 {
  max-height: calc(100vh - 10.5rem);
}

.c4 .cds--search-magnifier-icon {
  fill: #222;
}

.c3 {
  display: flex;
  width: 100%;
}

.c15 >.cds--modal-container {
  background: #383838;
  display: grid;
  overflow: hidden;
  background-color: var(--cds-layer);
  grid-template-columns: 100%;
  grid-template-rows: auto 1fr auto;
  outline: 3px solid transparent;
  outline-offset: -3px;
  transform-origin: top center;
  width: 15rem;
  max-height: 100%;
  position: absolute;
  right: 0;
  height: 100%;
  bottom: 0;
  top: auto;
  background: #fff;
}

.c15 >.cds--modal-container button svg {
  fill: #222!important;
}

.c15 >.cds--modal-container .cds--modal-close:hover {
  background-color: transparent!important;
}

.c16 >h3 {
  color: #161616;
  font-weight: 500;
}

.c16 button svg {
  fill: #fff;
}

.c16 .giga-text {
  display: flex;
  color: #fff;
  font-size: 2.4rem;
  font-weight: bolder;
}

.c16 .giga-text span:first-child {
  font-weight: 100;
}

.c16 .cds--modal-close:hover {
  background-color: #181818;
}

.c18 {
  display: flex;
  height: 3rem;
  justify-content: flex-end;
  margin-top: auto;
  grid-column: 1/-1;
  grid-row: -1/-1;
}

.c18 .cds--btn.cds--btn--secondary {
  padding: 0.75rem;
  color: #fff;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
  height: 3rem;
  box-shadow: none;
  background: #616161;
}

.c18 .cds--btn.cds--btn--primary {
  padding: 0.75rem;
  color: #fff;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
  height: 3rem;
  box-shadow: none;
}

<div>
    <div
      class="c0"
    >
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-:r0:"
            class="cds--btn--icon-only cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.7 12.3L2.9 8.5 15 8.5 15 7.5 2.9 7.5 6.7 3.7 6 3 1 8 6 13z"
              />
            </svg>
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-:r0:"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
          >
            Go Back
          </span>
          <span
            class="cds--popover-caret"
          />
        </span>
      </span>
      <div
        class="c1"
      >
        <h3>
          Api Keys Requests
        </h3>
        <p>
          List of Api Keys
        </p>
      </div>
    </div>
    <section
      aria-label="data table toolbar"
      class="cds--table-toolbar"
    >
      <div
        class="cds--toolbar-content c2"
      >
        <form
          class="cds--form c3"
        >
          <div
            aria-label="Search by API name, user"
            class="cds--search cds--search--lg c4 cds--toolbar-search-container-active cds--toolbar-search-container-expandable"
            role="search"
          >
            <div
              class="cds--search-magnifier"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="cds--search-magnifier-icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                />
              </svg>
            </div>
            <label
              class="cds--label"
              for="1"
              id="1-search"
            >
              Filter table
            </label>
            <input
              autocomplete="off"
              class="cds--search-input"
              id="1"
              placeholder="Search by API name, user"
              role="searchbox"
              tabindex="0"
              type="text"
              value=""
            />
            <button
              aria-label="Clear search input"
              class="cds--search-close cds--search-close--hidden"
              title="Clear search input"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:r3:"
                class="cds--btn--icon-only cds--btn cds--btn--secondary"
                tooltiptext="Search"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Search"
                  class="cds--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:r3:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Search
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </form>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-:r5:"
              class="cds--btn--icon-only cds--btn cds--btn--ghost"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="cds--btn__icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18,28H14a2,2,0,0,1-2-2V18.41L4.59,11A2,2,0,0,1,4,9.59V6A2,2,0,0,1,6,4H26a2,2,0,0,1,2,2V9.59A2,2,0,0,1,27.41,11L20,18.41V26A2,2,0,0,1,18,28ZM6,6V9.59l8,8V26h4V17.59l8-8V6Z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-:r5:"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Country filter
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </section>
    <div
      class="scrollbar-container c5 ps"
    >
      <div
        class="c6"
      >
        <div
          class="cds--data-table-content"
        >
          <table
            aria-label="api-keys-data-table"
            class="cds--data-table cds--data-table--lg"
          >
            <thead>
              <tr>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    API Name
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    User
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Country
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Valid till
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Extension Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Action
                  </div>
                </th>
                <th
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              aria-live="polite"
            >
              <tr>
                <td
                  class="api-keys-data-table-key-name"
                >
                  Giga Meter
                  <span>
                     (private)
                  </span>
                </td>
                <td>
                  <br />
                </td>
                <td
                  class="api-keys-data-table-key-name"
                >
                  <div
                    class="c7"
                  >
                    3
                    <span
                      class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--toggletip c8"
                    >
                      <button
                        aria-controls="id-:rf:"
                        aria-expanded="false"
                        aria-label="Show information"
                        class="cds--toggletip-button"
                        type="button"
                      >
                        <span
                          class="c9"
                        >
                          View list
                          <span
                            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip"
                          >
                            <div
                              class="cds--tooltip-trigger__wrapper"
                            />
                          </span>
                        </span>
                      </button>
                      <button
                        aria-labelledby="tooltip-:rg:"
                        class="sb-tooltip-trigger"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          style="fill: #000;"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                          />
                          <path
                            d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="cds--popover"
                    id="tooltip-:rg:"
                    role="tooltip"
                  >
                    <span
                      class="cds--popover-content cds--tooltip-content"
                    >
                      test
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                  <span
                    class="cds--popover"
                    id="id-:rf:"
                  >
                    <span
                      class="cds--popover-content c10"
                    >
                      <div
                        class="cds--toggletip-content"
                      >
                        <p
                          class="list-content"
                        >
                          Afghanistan, Botswana, Brazil
                        </p>
                      </div>
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                </td>
                <td>
                  <span
                    class="c11"
                  >
                    03-09-2024
                  </span>
                </td>
                <td>
                  <div
                    class="c12"
                    color="#B9EFCB"
                  >
                    Active
                  </div>
                </td>
                <td />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
              </tr>
              <tr>
                <td
                  class="api-keys-data-table-key-name"
                >
                  Giga Meter
                  <span>
                     (private)
                  </span>
                </td>
                <td>
                  <br />
                </td>
                <td
                  class="api-keys-data-table-key-name"
                >
                  <div
                    class="c7"
                  >
                    249
                    <span
                      class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--toggletip c8"
                    >
                      <button
                        aria-controls="id-:rh:"
                        aria-expanded="false"
                        aria-label="Show information"
                        class="cds--toggletip-button"
                        type="button"
                      >
                        <span
                          class="c9"
                        >
                          View list
                          <span
                            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip"
                          >
                            <div
                              class="cds--tooltip-trigger__wrapper"
                            />
                          </span>
                        </span>
                      </button>
                      <button
                        aria-labelledby="tooltip-:ri:"
                        class="sb-tooltip-trigger"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          style="fill: #000;"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                          />
                          <path
                            d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="cds--popover"
                    id="tooltip-:ri:"
                    role="tooltip"
                  >
                    <span
                      class="cds--popover-content cds--tooltip-content"
                    >
                      test
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                  <span
                    class="cds--popover"
                    id="id-:rh:"
                  >
                    <span
                      class="cds--popover-content c10"
                    >
                      <div
                        class="cds--toggletip-content"
                      >
                        <p
                          class="list-content"
                        >
                          Afghanistan, Åland Islands, Albania, Algeria, Andorra, Angola, Anguilla, Antarctica, Antigua and Barbuda, Argentina, Armenia, Aruba, Australia, Austria, Azerbaijan, Bahamas, Bahrain, Bangladesh, Barbados, Belarus, Belgium, Belize, Benin, Bermuda, Bhutan, Bolivia (Plurinational State of), Bonaire, Bosnia and Herzegovina, Botswana, Bouvet Island, Brazil, British Virgin Islands, Brunei Darussalam, Bulgaria, Burkina Faso, Burundi, Cabo Verde, Cambodia, Cameroon, Canada, Cayman Islands, Central African Republic, Chad, Chagos Archipelagio, Chile, China, Christmas Island, Cocos (Keeling) Islands, Colombia, Comoros, Congo, Cook Islands, Costa Rica, Côte d'Ivoire, Croatia, Cuba, Curaçao, Cyprus, Czechia, Democratic People's Republic of Korea, Democratic Republic of the Congo, Denmark, Djibouti, Dominica, Dominican Republic, Ecuador, Egypt, El Salvador, Equatorial Guinea, Eritrea, Estonia, Eswatini, Ethiopia, Falkland Islands (Malvinas), Faroe Islands, Fiji, Finland, France, French Guiana, French Polynesia, French Southern Territories, Gabon, Gambia, Georgia, Germany, Ghana, Gibraltar, Greece, Greenland, Grenada, Guadeloupe, Guam, Guatemala, Guernsey, Guinea, Guinea-Bissau, Guyana, Haiti, Heard Island and McDonald Islands, Holy See, Honduras, Hong Kong, Hungary, Iceland, India, Indonesia, Iran (Islamic Republic of), Iraq, Ireland, Isle of Man, Israel, Italy, Jamaica, Japan, Jersey, Jordan, Kazakhstan, Kenya, Kiribati, Kosovo, Kuwait, Kyrgyzstan, Lao People's Democratic Republic, Latvia, Lebanon, Lesotho, Liberia, Libya, Liechtenstein, Lithuania, Luxembourg, Macao, Madagascar, Malawi, Malaysia, Maldives, Mali, Malta, Marshall Islands, Martinique, Mauritania, Mauritius, Mayotte, Mexico, Micronesia (Federated States of), Midway Islands, Monaco, Mongolia, Montenegro, Montserrat, Morocco, Mozambique, Myanmar, Namibia, Nauru, Nepal, Netherlands, New Caledonia, New Zealand, Nicaragua, Niger, Nigeria, Niue, Norfolk Island, Northern Mariana Islands, Norway, Oman, Pakistan, Palau, Palestine, Panama, Papua New Guinea, Paraguay, Peru, Philippines, Pitcairn, Poland, Portugal, Puerto Rico, Qatar, Republic of Korea, Republic of Moldova, Réunion, Romania, Russian Federation, Rwanda, Saint Barthélemy, Saint Helena, Saint Kitts and Nevis, Saint Lucia, Saint Martin, Saint Pierre et Miquelon, Saint Vincent and the Grenadines, Samoa, San Marino, Sao Tome and Principe, Saudi Arabia, Senegal, Serbia, Seychelles, Sierra Leone, Singapore, Sint Maarten, Slovakia, Slovenia, Solomon Islands, Somalia, South Africa, South Georgia and the South Sandwich Islands, South Sudan, Spain, Sri Lanka, Sudan, Suriname, Svalbard and Jan Mayen Islands, Sweden, Switzerland, Syrian Arab Republic, Taiwan, Tajikistan, Thailand, The former Yugoslav Republic of Macedonia, Timor-Leste, Togo, Tokelau, Tonga, Trinidad and Tobago, Tunisia, Turkey, Turkmenistan, Turks and Caicos Islands, Tuvalu, Uganda, Ukraine, United Arab Emirates, United Kingdom of Great Britain & Northern Ireland, United Republic of Tanzania, United States of America, United States Virgin Islands, Uruguay, Uzbekistan, Vanuatu, Venezuela, Viet Nam, Wallis and Futuna, Western Sahara, Yemen, Zambia, Zimbabwe
                        </p>
                      </div>
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                </td>
                <td>
                  <span
                    class="c11"
                  >
                    03-09-2024
                  </span>
                </td>
                <td>
                  <div
                    class="c12"
                    color="#B9EFCB"
                  >
                    Active
                  </div>
                </td>
                <td />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
              </tr>
              <tr>
                <td
                  class="api-keys-data-table-key-name"
                >
                  Giga Meter
                  <span>
                     (private)
                  </span>
                </td>
                <td>
                  <br />
                </td>
                <td
                  class="api-keys-data-table-key-name"
                >
                  <div
                    class="c7"
                  >
                    -
                  </div>
                </td>
                <td>
                  <span
                    class="c11"
                  >
                    24-06-2024
                  </span>
                </td>
                <td>
                  <div
                    class="c13"
                    color="#FFD7D9"
                  >
                    Expired
                  </div>
                </td>
                <td />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="ps__rail-x"
        style="left: 0px; top: 0px;"
      >
        <div
          class="ps__thumb-x"
          style="left: 0px; width: 0px;"
          tabindex="0"
        />
      </div>
      <div
        class="ps__rail-y"
        style="top: 0px; left: 0px;"
      >
        <div
          class="ps__thumb-y"
          style="top: 0px; height: 0px;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="cds--pagination cds--pagination--md c14"
    >
      <div
        class="cds--pagination__left"
      >
        <label
          class="cds--pagination__text"
          for="cds-pagination-select-:rj:"
          id="cds-pagination-select-:rj:-count-label"
        >
          Items per page
        </label>
        <div
          class="cds--form-item cds--select__item-count"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:rj:"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="10"
                  >
                    10
                  </option>
                  <option
                    class="cds--select-option"
                    value="20"
                  >
                    20
                  </option>
                  <option
                    class="cds--select-option"
                    value="50"
                  >
                    50
                  </option>
                  <option
                    class="cds--select-option"
                    value="100"
                  >
                    100
                  </option>
                  <option
                    class="cds--select-option"
                    value="500"
                  >
                    500
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text cds--pagination__items-count"
        >
          1–3 of 3 items
        </span>
      </div>
      <div
        class="cds--pagination__right"
      >
        <div
          class="cds--form-item cds--select__page-number"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <label
              class="cds--label cds--visually-hidden"
              for="cds-pagination-select-:rj:-right"
            >
              Page number, of 1 pages
            </label>
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:rj:-right"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="1"
                  >
                    1
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text"
        >
          of 1 page
        </span>
        <div
          class="cds--pagination__control-buttons"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:rk:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--backward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 24L10 16 20 8z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:rk:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Previous page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top-right cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:rm:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--forward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8L22 16 12 24z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:rm:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Next page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="cds--modal c15"
      id="country-filter-api-key-filter-modal"
      role="presentation"
    >
      <div
        aria-modal="true"
        class="cds--modal-container"
        role="dialog"
      >
        <button
          class="cds--visually-hidden"
          type="button"
        >
          Focus sentinel
        </button>
        <div
          class="cds--modal-container-body"
        >
          <div
            class="cds--modal-header c16"
          >
            <h3
              class="cds--modal-header__heading cds--type-beta"
            >
              Filter By Country
            </h3>
            <button
              aria-label="Close"
              class="cds--modal-close"
              title="Close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="cds--modal-close__icon"
                fill="currentColor"
                focusable="false"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <div
            class="scrollbar-container ps"
            style="max-height: calc(100vh - 6rem);"
          >
            <fieldset
              class="cds--checkbox-group c17"
            >
              <legend
                class="cds--label"
              />
              <div
                class="cds--checkbox-group__validation-msg"
              />
            </fieldset>
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="cds--modal-footer c18 cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--secondary"
              data-testid="reset-country-filter"
              type="button"
            >
              Reset
            </button>
            <button
              class="cds--btn cds--btn--primary"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
        <button
          class="cds--visually-hidden"
          type="button"
        >
          Focus sentinel
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdminApiKey render with empty AdminApiKey 1`] = `
<DocumentFragment>
  .c6 {
  margin-top: 0;
  min-height: calc(100vh - 10.5rem);
}

.c6 td {
  background: #FFFFFF;
}

.c6 .api-keys-data-table-over-flow-menu .cds--popover {
  display: none;
}

.c6 .api-keys-data-table-over-flow-menu .cds--popover-content.cds--tooltip-content {
  display: none;
}

.c6 .cds--data-table thead {
  position: sticky;
  top: 0;
  z-index: 1;
}

.c6 .cds--data-table-content {
  overflow-x: initial;
}

.c6 .api-keys-data-table-key-name {
  width: 15%;
  padding: 1.5rem 1rem;
}

.c6 .api-keys-data-table-key {
  width: 40%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-key-country {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-validity {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-validity span {
  display: flex;
  width: 5rem;
}

.c6 .api-keys-data-table-over-flow-menu {
  width: 5%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c6 .api-keys-data-table-row {
  display: flex;
  align-items: center;
  padding: 0.5rem;
  background: #F6F6F6;
  width: 27rem;
}

.c6 .api-keys-data-table-row >p {
  font-size: 0.875rem;
  width: 23.5rem;
  overflow-wrap: break-word;
  height: 2.5rem;
  overflow: hidden;
  line-height: 1.25rem;
}

.c6 .api-keys-data-table-row >.api-keys-replicate-icon {
  margin-left: 1rem;
  cursor: pointer;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 1rem;
  font-size: 0.9rem;
  color: #fff;
}

.c1 >h3 {
  color: #FFF;
  font-family: Open Sans;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.75rem;
}

.c1 >p {
  color: #F5F5F5;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

.c0 {
  padding: 3.75rem 2rem 1rem 0rem;
  background: #222;
  display: flex;
  align-items: center;
}

.c0 button {
  margin-right: 1rem;
}

.c0 button path:not([data-icon-path]):not([fill=none]),
.c0 button .cds--btn__icon {
  fill: #fff!important;
}

.c8 .cds--popover {
  display: none;
}

.c2 {
  background-color: #ffffff;
}

.c11 {
  padding: 0rem 1rem 0.5rem 1rem;
}

.c5 {
  max-height: calc(100vh - 10.5rem);
}

.c4 .cds--search-magnifier-icon {
  fill: #222;
}

.c3 {
  display: flex;
  width: 100%;
}

.c9 >.cds--modal-container {
  background: #383838;
  display: grid;
  overflow: hidden;
  background-color: var(--cds-layer);
  grid-template-columns: 100%;
  grid-template-rows: auto 1fr auto;
  outline: 3px solid transparent;
  outline-offset: -3px;
  transform-origin: top center;
  width: 15rem;
  max-height: 100%;
  position: absolute;
  right: 0;
  height: 100%;
  bottom: 0;
  top: auto;
  background: #fff;
}

.c9 >.cds--modal-container button svg {
  fill: #222!important;
}

.c9 >.cds--modal-container .cds--modal-close:hover {
  background-color: transparent!important;
}

.c10 >h3 {
  color: #161616;
  font-weight: 500;
}

.c10 button svg {
  fill: #fff;
}

.c10 .giga-text {
  display: flex;
  color: #fff;
  font-size: 2.4rem;
  font-weight: bolder;
}

.c10 .giga-text span:first-child {
  font-weight: 100;
}

.c10 .cds--modal-close:hover {
  background-color: #181818;
}

.c12 {
  display: flex;
  height: 3rem;
  justify-content: flex-end;
  margin-top: auto;
  grid-column: 1/-1;
  grid-row: -1/-1;
}

.c12 .cds--btn.cds--btn--secondary {
  padding: 0.75rem;
  color: #fff;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
  height: 3rem;
  box-shadow: none;
  background: #616161;
}

.c12 .cds--btn.cds--btn--primary {
  padding: 0.75rem;
  color: #fff;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
  height: 3rem;
  box-shadow: none;
}

<div>
    <div
      class="c0"
    >
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-:rq:"
            class="cds--btn--icon-only cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.7 12.3L2.9 8.5 15 8.5 15 7.5 2.9 7.5 6.7 3.7 6 3 1 8 6 13z"
              />
            </svg>
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-:rq:"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
          >
            Go Back
          </span>
          <span
            class="cds--popover-caret"
          />
        </span>
      </span>
      <div
        class="c1"
      >
        <h3>
          Api Keys Requests
        </h3>
        <p>
          List of Api Keys
        </p>
      </div>
    </div>
    <section
      aria-label="data table toolbar"
      class="cds--table-toolbar"
    >
      <div
        class="cds--toolbar-content c2"
      >
        <form
          class="cds--form c3"
        >
          <div
            aria-label="Search by API name, user"
            class="cds--search cds--search--lg c4 cds--toolbar-search-container-active cds--toolbar-search-container-expandable"
            role="search"
          >
            <div
              class="cds--search-magnifier"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="cds--search-magnifier-icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                />
              </svg>
            </div>
            <label
              class="cds--label"
              for="2"
              id="2-search"
            >
              Filter table
            </label>
            <input
              autocomplete="off"
              class="cds--search-input"
              id="2"
              placeholder="Search by API name, user"
              role="searchbox"
              tabindex="0"
              type="text"
              value=""
            />
            <button
              aria-label="Clear search input"
              class="cds--search-close cds--search-close--hidden"
              title="Clear search input"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:rt:"
                class="cds--btn--icon-only cds--btn cds--btn--secondary"
                tooltiptext="Search"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Search"
                  class="cds--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:rt:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Search
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </form>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-:rv:"
              class="cds--btn--icon-only cds--btn cds--btn--ghost"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="cds--btn__icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18,28H14a2,2,0,0,1-2-2V18.41L4.59,11A2,2,0,0,1,4,9.59V6A2,2,0,0,1,6,4H26a2,2,0,0,1,2,2V9.59A2,2,0,0,1,27.41,11L20,18.41V26A2,2,0,0,1,18,28ZM6,6V9.59l8,8V26h4V17.59l8-8V6Z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-:rv:"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Country filter
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </section>
    <div
      class="scrollbar-container c5 ps"
    >
      <div
        class="c6"
      >
        <div
          class="cds--data-table-content"
        >
          <table
            aria-label="api-keys-data-table"
            class="cds--data-table cds--data-table--lg"
          >
            <thead>
              <tr>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    API Name
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    User
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Country
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Valid till
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Extension Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Action
                  </div>
                </th>
                <th
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              aria-live="polite"
            />
          </table>
        </div>
      </div>
      <div
        class="c7"
      >
        No data found
      </div>
      <div
        class="ps__rail-x"
        style="left: 0px; top: 0px;"
      >
        <div
          class="ps__thumb-x"
          style="left: 0px; width: 0px;"
          tabindex="0"
        />
      </div>
      <div
        class="ps__rail-y"
        style="top: 0px; left: 0px;"
      >
        <div
          class="ps__thumb-y"
          style="top: 0px; height: 0px;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="cds--pagination cds--pagination--md c8"
    >
      <div
        class="cds--pagination__left"
      >
        <label
          class="cds--pagination__text"
          for="cds-pagination-select-:r19:"
          id="cds-pagination-select-:r19:-count-label"
        >
          Items per page
        </label>
        <div
          class="cds--form-item cds--select__item-count"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:r19:"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="10"
                  >
                    10
                  </option>
                  <option
                    class="cds--select-option"
                    value="20"
                  >
                    20
                  </option>
                  <option
                    class="cds--select-option"
                    value="50"
                  >
                    50
                  </option>
                  <option
                    class="cds--select-option"
                    value="100"
                  >
                    100
                  </option>
                  <option
                    class="cds--select-option"
                    value="500"
                  >
                    500
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text cds--pagination__items-count"
        >
          1–1 of 1 items
        </span>
      </div>
      <div
        class="cds--pagination__right"
      >
        <div
          class="cds--form-item cds--select__page-number"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <label
              class="cds--label cds--visually-hidden"
              for="cds-pagination-select-:r19:-right"
            >
              Page number, of 1 pages
            </label>
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:r19:-right"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="1"
                  >
                    1
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text"
        >
          of 1 page
        </span>
        <div
          class="cds--pagination__control-buttons"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:r1a:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--backward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 24L10 16 20 8z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:r1a:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Previous page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top-right cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:r1c:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--forward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8L22 16 12 24z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:r1c:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Next page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="cds--modal c9"
      id="country-filter-api-key-filter-modal"
      role="presentation"
    >
      <div
        aria-modal="true"
        class="cds--modal-container"
        role="dialog"
      >
        <button
          class="cds--visually-hidden"
          type="button"
        >
          Focus sentinel
        </button>
        <div
          class="cds--modal-container-body"
        >
          <div
            class="cds--modal-header c10"
          >
            <h3
              class="cds--modal-header__heading cds--type-beta"
            >
              Filter By Country
            </h3>
            <button
              aria-label="Close"
              class="cds--modal-close"
              title="Close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="cds--modal-close__icon"
                fill="currentColor"
                focusable="false"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <div
            class="scrollbar-container ps"
            style="max-height: calc(100vh - 6rem);"
          >
            <fieldset
              class="cds--checkbox-group c11"
            >
              <legend
                class="cds--label"
              />
              <div
                class="cds--checkbox-group__validation-msg"
              />
            </fieldset>
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="cds--modal-footer c12 cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--secondary"
              data-testid="reset-country-filter"
              type="button"
            >
              Reset
            </button>
            <button
              class="cds--btn cds--btn--primary"
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
        <button
          class="cds--visually-hidden"
          type="button"
        >
          Focus sentinel
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
